Fix Issue #22 - Background image getting cut off

--- a/less/custom/moodle-settings.css
+++ b/less/custom/moodle-settings.css
@@ -1,7 +1,7 @@
 /* These are settings that need to be in a separate CSS file so LESS doesn't complain about syntax errors */
 
 /* Page background */
-body.theme_uikit , h2.pagetitle span {
+html {
     [[setting:pagebackground]];
 }
 
