--- a/style/themeuikit.css
+++ b/style/themeuikit.css
@@ -19419,7 +19419,7 @@ a.logo {
 /* These are settings that need to be in a separate CSS file so LESS doesn't complain about syntax errors */
 
 /* Page background */
-body.theme_uikit , h2.pagetitle span {
+html {
     [[setting:pagebackground]];
 }
 
